plugins {
    id 'java'
    id "io.freefair.lombok" version "6.4.3"
}

group 'org.redstom'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = '18'

repositories {
    mavenCentral()
}

dependencies {
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'com.google.code.gson:gson:2.9.0'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

lombok {
    config = [
            "lombok.accessors.fluent": true
    ]
}
